# data-emission

./: .env.example  .gitignore  README.md  config.dev.yaml  config.example.yaml  pyproject.toml
deploy/: DEPLOY.md  emission-tracker.service  nginx.conf.example
docs/superpowers/plans/: 2026-05-17-emission-tracker.md
docs/superpowers/specs/: 2026-05-17-emission-tracker-design.md
scripts/: seed_dummy.py
src/emission_tracker/: config.py  db.py  main.py  rate_limiter.py  taostats_client.py  units.py
src/emission_tracker/bot/: scheduler.py  snapshot.py
src/emission_tracker/web/: auth.py  queries.py  range_parse.py  routes_api.py  routes_pages.py
src/emission_tracker/web/static/: style.css
src/emission_tracker/web/templates/: archive.html  archive_detail.html  base.html  captures.html  dashboard.html  history.html  kas.html  kas_detail.html  person.html
tests/: conftest.py  test_auth.py  test_config_loader.py  test_config_model.py  test_db.py  test_main.py  test_queries.py  test_range_parse.py  test_rate_limiter.py  test_routes_api.py  test_routes_pages.py  test_snapshot.py  test_taostats_client.py  test_units.py
